# Rendering_refactored

./: .gitignore  CMakeLists.txt  Camera.h  Film.cpp  Film.h  README.md  Ray.h  RayHitInfo.h  TriangleObj.cpp  TriangleObj.h  constants.h  main.cpp  utils.cpp  utils.h
